--- a/docs-v2/integrations/all/google-drive.mdx
+++ b/docs-v2/integrations/all/google-drive.mdx
@@ -95,8 +95,8 @@ Nango's pre-built Google drive integration only syncs whitelisted files & folder
         'google-drive',
         'CONNECTION-ID',
         {
-            'folders': ['abc', 'def', '<folder-ids>'],
-            'files': ['<file>', '<ids>', '<here>'] 
+             'folders': ['<folder-id>, ...],
+            'files': ['<file-id>', ...] 
         }
     );
     ```
