--- a/docs-v2/integrations/all/chargebee.mdx
+++ b/docs-v2/integrations/all/chargebee.mdx
@@ -10,9 +10,9 @@ API configuration: [`chargebee`](https://nango.dev/providers.yaml)
 | Features | Status |
 | - | - |
 | [Auth (API Key)](/integrate/guides/authorize-an-api) | ✅ |
-| [Sync data](/integrate/guides/sync-data-from-an-api) | 🚫 |
-| [Perform workflows](/integrate/guides/perform-workflows-with-an-api) | 🚫 |
-| [Proxy requests](/integrate/guides/proxy-requests-to-an-api) | 🚫 |
+| [Sync data](/integrate/guides/sync-data-from-an-api) | ✅ |
+| [Perform workflows](/integrate/guides/perform-workflows-with-an-api) | ✅ |
+| [Proxy requests](/integrate/guides/proxy-requests-to-an-api) | ✅ |
 | [Receive webhooks](/integrate/guides/receive-webhooks-from-an-api) | 🚫 (time to contribute: &lt;48h) |
 
 <Tip>We can implement missing features in &lt;48h, just ask for it in the [community](https://nango.dev/slack).</Tip>
