feat(integrations): add support for metabase

--- a/docs-v2/integrations/analytics.mdx
+++ b/docs-v2/integrations/analytics.mdx
@@ -11,6 +11,7 @@ sidebarTitle: Analytics
 <CardGroup cols={4}>
     <Card title="Amplitude" href="/integrations/all/amplitude" color="#68a063" />
     <Card title="Fireflies" href="/integrations/all/fireflies" color="#68a063" />
+    <Card title="Metabase" href="/integrations/all/metabase" color="#68a063" />
     <Card title="Mixpanel" href="/integrations/all/mixpanel" color="#68a063" />
     <Card title="Segment" href="/integrations/all/segment" color="#68a063" />
     <Card title="Tableau" href="/integrations/all/tableau" color="#68a063" />
