--- a/docs-v2/integrations/all/checkout-com.mdx
+++ b/docs-v2/integrations/all/checkout-com.mdx
@@ -1,9 +1,9 @@
 ---
-title: Checkout
-sidebarTitle: Checkout
+title: Checkout.com
+sidebarTitle: Checkout.com
 ---
 
-API configurations: [`checkout`](https://nango.dev/providers.yaml), [`checkout-sandbox`](https://nango.dev/providers.yaml)
+API configurations: [`checkout-com`](https://nango.dev/providers.yaml), [`checkout-com-sandbox`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -29,4 +29,4 @@ API configurations: [`checkout`](https://nango.dev/providers.yaml), [`checkout-s
 
 -   Checkout offers client credentials token that authorizes as app instead of a user.
 
-<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/Checkout.mdx)</Note>
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/checkout-com.mdx)</Note>
