--- a/docs-v2/integrations/all/checkout-com.mdx
+++ b/docs-v2/integrations/all/checkout-com.mdx
@@ -27,6 +27,6 @@ API configurations: [`checkout-com`](https://nango.dev/providers.yaml), [`checko
 
 ## API gotchas
 
--   Checkout offers client credentials token that authorizes as app instead of a user.
+-   Checkout.com offers client credentials token that authorizes as app instead of a user.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/checkout-com.mdx)</Note>
