Fix copy/paste error

--- a/docs-v2/integrations/all/holded.mdx
+++ b/docs-v2/integrations/all/holded.mdx
@@ -25,6 +25,6 @@ API configurations: [`holded`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-- Pendo uses `API_KEY` auth mode where `key`: `API key` is passed to the request header for Authentication.
+- Holded uses `API_KEY` auth mode where `key`: `API key` is passed to the request header for Authentication.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/holded.mdx)</Note>
