Add Holded to the individual docs for the different categories

--- a/docs-v2/integrations/accounting.mdx
+++ b/docs-v2/integrations/accounting.mdx
@@ -27,6 +27,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
     <Card title="E-conomic" href="/integrations/all/e-conomic" color="#68a063" />
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
     <Card title="Freshbooks" href="/integrations/all/freshbooks" color="#68a063" />
+    <Card title="Holded" href="/integrations/all/holded" color="#68a063" />
     <Card title="Intuit" href="/integrations/all/intuit" color="#68a063" />
     <Card title="Netsuite" href="/integrations/all/netsuite" color="#68a063" />
     <Card title="Pennylane" href="/integrations/all/pennylane" color="#68a063" />
