--- a/docs-v2/integrations/crm.mdx
+++ b/docs-v2/integrations/crm.mdx
@@ -33,6 +33,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
     <Card title="Gainsight CC" href="/integrations/all/gainsight-cc" color="#68a063" />
     <Card title="Gong" href="/integrations/all/gong" color="#68a063" />
+    <Card title="Holded" href="/integrations/all/holded" color="#68a063" />
     <Card title="Hubspot" href="/integrations/all/hubspot" color="#68a063" />
     <Card title="Freshsales" href="/integrations/all/freshsales" color="#68a063" />
     <Card title="Intercom" href="/integrations/all/intercom" color="#68a063" />
