feat(integrations): add support for codeclimate

--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -12,6 +12,7 @@ sidebarTitle: Productivity
     <Card title="Airtable" href="/integrations/all/airtable" color="#68a063" />
     <Card title="Asana" href="/integrations/all/asana" color="#68a063" />
     <Card title="Calendly" href="/integrations/all/calendly" color="#68a063" />
+    <Card title="CodeClimate" href="/integrations/all/codeclimate" color="#68a063" />
     <Card title="Clickup" href="/integrations/all/clickup" color="#68a063" />
     <Card title="Expensify" href="/integrations/all/expensify" color="#68a063" />
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
