feat(integrations): add support for google play

--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -18,6 +18,7 @@ sidebarTitle: Developer Tools
     <Card title="Digital Ocean" href="/integrations/all/digitalocean" color="#68a063" />
     <Card title="Github" href="/integrations/all/github" color="#68a063" />
     <Card title="Gitlab" href="/integrations/all/gitlab" color="#68a063" />
+    <Card title="Google Play" href="/integrations/all/google-play" color="#68a063" />
     <Card title="Klipfolio" href="/integrations/all/klipfolio" color="#68a063" />
     <Card title="Mailgun" href="/integrations/all/mailgun" color="#68a063" />
     <Card title="PagerDuty" href="/integrations/all/pagerduty" color="#68a063" />
