docs: update the template list in the docs

--- a/docs-v2/integrations/integration-templates/anrok.mdx
+++ b/docs-v2/integrations/integration-templates/anrok.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'NextCloud API Integration Template'
-sidebarTitle: 'NextCloud'
+title: 'Anrok API Integration Template'
+sidebarTitle: 'Anrok'
 ---
 
-## Get started with the NextCloud template
+## Get started with the Anrok template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,10 +11,10 @@ sidebarTitle: 'NextCloud'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the NextCloud template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/next-cloud"
+<Card title="Get the Anrok template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/anrok"
       icon="github">
-    Get the latest version of the NextCloud integration template from GitHub
+    Get the latest version of the Anrok integration template from GitHub
 </Card>
 
 ## Need help with the template?
