--- a/docs-v2/integrations/integration-templates/google-drive.mdx
+++ b/docs-v2/integrations/integration-templates/google-drive.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'HiBob API Integration Template'
-sidebarTitle: 'HiBob'
+title: 'Google Drive API Integration Template'
+sidebarTitle: 'Google Drive'
 ---
 
-## Get started with the HiBob template
+## Get started with the Google Drive template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,10 +11,10 @@ sidebarTitle: 'HiBob'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the HiBob template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/hibob"
+<Card title="Get the Google Drive template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/google-drive"
       icon="github">
-    Get the latest version of the HiBob integration template from GitHub
+    Get the latest version of the Google Drive integration template from GitHub
 </Card>
 
 ## Need help with the template?
