--- a/docs-v2/integrations/integration-templates/bamboohr-basic.mdx
+++ b/docs-v2/integrations/integration-templates/bamboohr-basic.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Gmail API Integration Template'
-sidebarTitle: 'Gmail'
+title: 'Bamboohr Basic API Integration Template'
+sidebarTitle: 'Bamboohr Basic'
 ---
 
-## Get started with the Gmail template
+## Get started with the Bamboohr Basic template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,10 +11,10 @@ sidebarTitle: 'Gmail'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the Gmail template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/google-mail"
+<Card title="Get the Bamboohr Basic template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/bamboohr-basic"
       icon="github">
-    Get the latest version of the Gmail integration template from GitHub
+    Get the latest version of the Bamboohr Basic integration template from GitHub
 </Card>
 
 ## Need help with the template?
