--- a/docs-v2/integrations/integration-templates/exact-online.mdx
+++ b/docs-v2/integrations/integration-templates/exact-online.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Lever API Integration Template'
-sidebarTitle: 'Lever'
+title: 'Exact Online API Integration Template'
+sidebarTitle: 'Exact Online'
 ---
 
-## Get started with the Lever template
+## Get started with the Exact Online template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,10 +11,10 @@ sidebarTitle: 'Lever'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the Lever template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/lever"
+<Card title="Get the Exact Online template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/exact-online"
       icon="github">
-    Get the latest version of the Lever integration template from GitHub
+    Get the latest version of the Exact Online integration template from GitHub
 </Card>
 
 ## Need help with the template?
