--- a/docs-v2/integrations/integration-templates/google-calendar.mdx
+++ b/docs-v2/integrations/integration-templates/google-calendar.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Bamboohr API Integration Template'
-sidebarTitle: 'Bamboohr'
+title: 'Google Calendar API Integration Template'
+sidebarTitle: 'Google Calendar'
 ---
 
-## Get started with the Bamboohr template
+## Get started with the Google Calendar template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,10 +11,10 @@ sidebarTitle: 'Bamboohr'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the Bamboohr template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/bamboohr"
+<Card title="Get the Google Calendar template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/google-calendar"
       icon="github">
-    Get the latest version of the Bamboohr integration template from GitHub
+    Get the latest version of the Google Calendar integration template from GitHub
 </Card>
 
 ## Need help with the template?
