--- a/docs-v2/integrations/integration-templates/lever-basic.mdx
+++ b/docs-v2/integrations/integration-templates/lever-basic.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Greenhouse API Integration Template'
-sidebarTitle: 'Greenhouse'
+title: 'Lever Basic API Integration Template'
+sidebarTitle: 'Lever Basic'
 ---
 
-## Get started with the Greenhouse template
+## Get started with the Lever Basic template
 
 <Card title="How to use integration templates"
       href="/understand/concepts/templates"
@@ -11,10 +11,10 @@ sidebarTitle: 'Greenhouse'
     Learn how to use integration templates in Nango
 </Card>
 
-<Card title="Get the Greenhouse template"
-      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/greenhouse"
+<Card title="Get the Lever Basic template"
+      href="https://github.com/NangoHQ/nango/tree/master/integration-templates/lever-basic"
       icon="github">
-    Get the latest version of the Greenhouse integration template from GitHub
+    Get the latest version of the Lever Basic integration template from GitHub
 </Card>
 
 ## Need help with the template?
