feat(integrations): add support for make

--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -30,6 +30,7 @@ sidebarTitle: Productivity
     <Card title="Lessonly" href="/integrations/all/lessonly" color="#68a063" />
     <Card title="Linear" href="/integrations/all/linear" color="#68a063" />
     <Card title="Luma" href="/integrations/all/luma" color="#68a063" />
+    <Card title="Make" href="/integrations/all/make" color="#68a063" />
     <Card title="Microsoft Power Bi" href="/integrations/all/microsoft-power-bi" color="#68a063" />
     <Card title="Microsoft Teams" href="/integrations/all/microsoft-teams" color="#68a063" />
     <Card title="Miro" href="/integrations/all/miro" color="#68a063" />
