--- a/docs-v2/integrations/all/make.mdx
+++ b/docs-v2/integrations/all/make.mdx
@@ -21,12 +21,12 @@ API configuration: [`make`](https://nango.dev/providers.yaml)
 
 - [How to generate an authentication token](https://www.make.com/en/api-documentation/authentication-token)
 - [Make Authentication](https://www.make.com/en/api-documentation/authentication)
-- [Make API rate limiting](https://www.make.com/en/api-documentation/rate-limiting)
+- [Make API-rate limiting](https://www.make.com/en/api-documentation/rate-limiting)
 - [API docs](https://www.make.com/en/api-documentation)
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
 
-- When adding a new connection, you will also need to add your `environmentUrl`, this can be the link to your private instance of Make, for example, `development.make.cloud`, or the link to Make (with or without the zone, depending on a specific endpoint), for example, `eu1.make.com`. For more details check [API structure](https://www.make.com/en/api-documentation/api-structure).
+- When adding a new connection, you will also need to add your `environmentUrl`, this can be the link to your private instance of Make, for example, `development.make.cloud`, or the link to Make (with or without the zone, depending on a specific endpoint), for example, `eu1.make.com`. For more details, check [API structure](https://www.make.com/en/api-documentation/api-structure).
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/make.mdx)</Note>
