docs: correctly document basic auth

--- a/docs-v2/host/self-host/self-hosting-instructions.mdx
+++ b/docs-v2/host/self-host/self-hosting-instructions.mdx
@@ -74,6 +74,7 @@ You can secure it with Basic Auth by setting the following environment variables
 and restarting the server:
 
 ```bash
+FLAG_AUTH_ENABLED=false # This will disable regular login and signup
 NANGO_DASHBOARD_USERNAME=<PICK-A-USERNAME>
 NANGO_DASHBOARD_PASSWORD=<PICK-A-PASSWORD>
 ```
