--- a/docs-v2/introduction.mdx
+++ b/docs-v2/introduction.mdx
@@ -4,18 +4,18 @@ sidebarTitle: 'Introduction'
 description: 'One platform for all your integrations.'
 ---
 
-Nango is a single API to interact with all other external APIs. It should be the only API you need to integrate to your app. 
+Nango is a single API to interact with all other external APIs. It should be the only API you need to integrate to your app.
 
 <Frame caption="One API, many integrations.">
   <img src="/images/overview.png" />
 </Frame>
 
-# 👩‍💻 Sample code 
+# 👩‍💻 Sample code
 
 Initiate a new OAuth flow from your frontend:
 
 ```js
-nango.auth('github', 'user123');
+nango.authentication('github');
 ```
 
 Get structured objects from external APIs from your backend:
