--- a/docs-v2/reference/sdks/frontend.mdx
+++ b/docs-v2/reference/sdks/frontend.mdx
@@ -24,7 +24,7 @@ let nango = new Nango({ publicKey: '<PUBLIC-KEY>' });
       </ResponseField>
 
       <ResponseField name="host" type="string">
-        Omitting the host points to Nango Cloud. For local development, use `http://localhost:3003`. Use your instance URL if self-hosting. 
+        Omitting the host points to Nango Cloud. For local development, use `http://localhost:3003`. Use your instance URL if self-hosting.
       </ResponseField>
 
       <ResponseField name="websocketsPath" type="string">
@@ -49,21 +49,107 @@ let nango = new Nango({ publicKey: '<PUBLIC-KEY>' });
 
 # Collect & store end-user credentials
 
-You store end-user credentials with the `nango.auth` method. It creates a [connection](/understand/concepts/connections) in Nango.
+You store end-user credentials with the `nango.authentication` method. It creates a [connection](/understand/concepts/connections) in Nango.
 
-<Tabs>
-
-<Tab title="OAuth">
+## Oauth
 
 For OAuth, this will open a modal to let the user log in to their external account.
 
 ```js
-const result = await nango.auth('<INTEGRATION-ID>', '<CONNECTION-ID>').catch((error) => {
+const result = await nango.authentication('<INTEGRATION-ID>').catch((error) => {
 ...
 });
 ```
 
-</Tab>
+**Parameters**
+<Expandable>
+  <ResponseField name="providerConfigKey" type="string" required>
+    The integration ID that you can find in the integration settings on the Nango UI.
+  </ResponseField>
+
+  <ResponseField name="options" type="object">
+    <Expandable title="options" defaultOpen>
+      <ResponseField name="params" type="object">
+        Specify additional [connection configuration](/integrate/guides/authorize-an-api#apis-requiring-connection-specific-configuration-for-authorization) necessary to perform the authorization request.
+      </ResponseField>
+
+      <ResponseField name="hmac" type="string">
+        HMAC key to secure the authorization flow (cf. (instructions)[TODO]).
+      </ResponseField>
+
+      <ResponseField name="detectClosedAuthWindow" type="boolean">
+        If `true`, `nango.auth()` would fail if the login window is closed before the authorization flow is completed.
+      </ResponseField>
+
+      <ResponseField name="authorization_params" type="object">
+        For OAuth, specify the query parameters of the authorization URL.
+      </ResponseField>
+
+      <ResponseField name="user_scope" type="string[]">
+        For Slack OAuth, specify user-specific scopes.
+      </ResponseField>
+
+      <ResponseField name="credentials" type="object">
+        <Expandable title="credentials" defaultOpen>
+          <ResponseField name="apiKey" type="string">
+            For API key authorization, pass in the user's API key.
+          </ResponseField>
+
+          <ResponseField name="username" type="string">
+            For Basic authorization, pass in the user's username.
+          </ResponseField>
+
+          <ResponseField name="password" type="string">
+            For Basic authorization, pass in the user's password.
+          </ResponseField>
+
+          <ResponseField name="oauth_client_id_override" type="string">
+            For OAuth 2, override the integration's client ID with a connection-level client ID. This is useful when your users bring their own OAuth 2 app (e.g. Netsuite).
+          </ResponseField>
+
+          <ResponseField name="oauth_client_secret_override" type="string">
+            For OAuth 2, override the integration's client secret with a connection-level client secret. This is useful when your users bring their own OAuth 2 app (e.g. Netsuite).
+          </ResponseField>
+        </Expandable>
+      </ResponseField>
+    </Expandable>
+  </ResponseField>
+</Expandable>
+
+**Success response**
+
+<Expandable>
+  <ResponseField name="providerConfigKey" type="string">
+    The integration ID that you can find in the integration settings on the Nango UI.
+  </ResponseField>
+
+  <ResponseField name="connectionId" type="string">
+    The connection ID that you can find in the _Connections_ tab on the Nango UI.
+  </ResponseField>
+
+  <ResponseField name="connectionToken" type="string">
+    A unique identifier for the connection.
+  </ResponseField>
+</Expandable>
+
+**Error response**
+<Expandable>
+  <ResponseField name="error" type="object">
+    <Expandable title="error" defaultOpen>
+      <ResponseField name="type" type="string">
+        The type of error (e.g. 'authorization_cancelled').
+      </ResponseField>
+
+      <ResponseField name="message" type="string">
+        The detailed error message (e.g. 'Authorization fail: The user has closed the authorization modal before the process was complete.').
+      </ResponseField>
+    </Expandable>
+  </ResponseField>
+</Expandable>
+
+## API Key and Basic Auth
+
+<Tabs>
 
 <Tab title="API Key">
 
@@ -119,11 +205,11 @@ const result = nango.auth('<INTEGRATION-ID>', '<CONNECTION-ID>', {
       </ResponseField>
 
       <ResponseField name="authorization_params" type="object">
-        For OAuth, specify the query parameters of the authorization URL. 
+        For OAuth, specify the query parameters of the authorization URL.
       </ResponseField>
 
       <ResponseField name="user_scope" type="string[]">
-        For Slack OAuth, specify user-specific scopes. 
+        For Slack OAuth, specify user-specific scopes.
       </ResponseField>
 
       <ResponseField name="credentials" type="object">
