chore: Update count of supported APIs

--- a/docs-v2/integrations/overview.mdx
+++ b/docs-v2/integrations/overview.mdx
@@ -1,13 +1,15 @@
 ---
-title: Explore 190+ pre-configured APIs
+title: Explore 250+ pre-configured APIs
 sidebarTitle: Overview
 ---
 
 <Note>
-Nango is an open-source platform for product integrations. Integrate with external APIs in hours, not weeks, while maintaining full control ([learn more](/introduction)).
+Nango is an open-source platform for product integrations.
+
+It has hundreds of pre-built integrations, which you can extend & customize.
 </Note>
 
-Nango is pre-configured for 190+ APIs and integration templates.
+Nango is pre-configured for 250+ APIs and integration templates.
 
 # Explore APIs by Category
 
