feat(integrations): add support for zoho-people

--- a/docs-v2/integrations/hr.mdx
+++ b/docs-v2/integrations/hr.mdx
@@ -20,4 +20,5 @@ sidebarTitle: HR
     <Card title="Personio" href="/integrations/all/personio" color="#68a063" />
     <Card title="TSheetsTeam" href="/integrations/all/tsheetsteam" color="#68a063" />
     <Card title="Zenefits" href="/integrations/all/zenefits" color="#68a063" />
+    <Card title="Zoho People" href="/integrations/all/zoho-people" color="#68a063" />
 </CardGroup>
