--- a/docs-v2/integrations/invoicing.mdx
+++ b/docs-v2/integrations/invoicing.mdx
@@ -10,6 +10,7 @@ sidebarTitle: Invoicing
 
 <CardGroup cols={4}>
     <Card title="Accelo" href="/integrations/all/accelo" color="#68a063" />
+    <Card title="Coupa Compass" href="/integrations/all/coupa-compass" color="#68a063" />
     <Card title="Holded" href="/integrations/all/holded" color="#68a063" />
     <Card title="Pennylane" href="/integrations/all/pennylane" color="#68a063" />
     <Card title="Zoho Invoice" href="/integrations/all/zoho-invoice" color="#68a063" />
